--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/shop_db
     username: postgres
-    password: admin
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -12,8 +12,8 @@ spring:
   mail:
     host: smtp.yandex.ru
     port: 465
-    username: danil134567@yandex.ru
-    password: qwtepjpisgkfeyvd
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     test-connection: true
     default-encoding: UTF-8
     properties:
@@ -25,3 +25,6 @@ spring:
           connectiontimeout: 5000
           timeout: 5000
           writetimeout: 5000
+jwt:
+  secret: ${JWT_SECRET_KEY}
+  expiration: 86400000
