--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,8 @@ spring:
 jwt:
   secret: ${JWT_SECRET_KEY}
   expiration: 86400000
+
+photo:
+  storage:
+    location: ./uploads
+    base-url: /media/
